// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<div>
  <mdc-button
    class="md-button-dialpad-wrapper"
    color="default"
    data-btn-type="pill"
    primarytext="1"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  >
    <div
      class="md-button-dialpad-inner-wrapper"
    >
      <div
        class="md-button-dialpad-primary-text"
      >
        1
      </div>
      <div
        class="md-button-dialpad-secondary-text"
      />
    </div>
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabled 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-dialpad-wrapper"
    color="default"
    data-btn-type="pill"
    disabled=""
    internals-disabled=""
    primarytext="Example Text"
    role="button"
    size="40"
    tabindex="-1"
    type="button"
    variant="tertiary"
  >
    <div
      class="md-button-dialpad-inner-wrapper"
    >
      <div
        class="md-button-dialpad-primary-text"
      >
        Example Text
      </div>
      <div
        class="md-button-dialpad-secondary-text"
      />
    </div>
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with primaryText 1`] = `
<div>
  <mdc-button
    class="md-button-dialpad-wrapper"
    color="default"
    data-btn-type="pill"
    primarytext="1"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  >
    <div
      class="md-button-dialpad-inner-wrapper"
    >
      <div
        class="md-button-dialpad-primary-text"
      >
        1
      </div>
      <div
        class="md-button-dialpad-secondary-text"
      />
    </div>
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with primaryText and secondaryText 1`] = `
<div>
  <mdc-button
    class="md-button-dialpad-wrapper"
    color="default"
    data-btn-type="pill"
    primarytext="1"
    role="button"
    secondarytext="ABC"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  >
    <div
      class="md-button-dialpad-inner-wrapper"
    >
      <div
        class="md-button-dialpad-primary-text"
      >
        1
      </div>
      <div
        class="md-button-dialpad-secondary-text"
      >
        ABC
      </div>
    </div>
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with secondaryText 1`] = `
<div>
  <mdc-button
    class="md-button-dialpad-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    secondarytext="ABC"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  >
    <div
      class="md-button-dialpad-inner-wrapper"
    >
      <div
        class="md-button-dialpad-primary-text"
      />
      <div
        class="md-button-dialpad-secondary-text"
      >
        ABC
      </div>
    </div>
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with title 1`] = `
<div>
  <mdc-button
    class="md-button-dialpad-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    size="40"
    tabindex="0"
    title="Example Text"
    type="button"
    variant="tertiary"
  >
    <div
      class="md-button-dialpad-inner-wrapper"
    >
      <div
        class="md-button-dialpad-primary-text"
      />
      <div
        class="md-button-dialpad-secondary-text"
      />
    </div>
  </mdc-button>
</div>
`;
